--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,36 +1,55 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
+owner: El-Paso-Community-College # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
-  - name: IPv6 test
-    url: forwardemail.net
-    port: 80
+  - name: EPCC Public Website
+    url: https://www.epcc.edu
+    maxResponseTime: 5000
+  - name: MyEPCC
+    url: https://my.epcc.edu
+    maxResponseTime: 5000
+    expectedStatusCodes:
+      - 200
+      - 201
+      - 401
+  - name: Self Service Banner
+    url: https://ssb3.epcc.edu:8444/StudentRegistrationSsb
+    maxResponseTime: 5000
+  - name: Apps
+    url: https://apps.epcc.edu
+  - name: WAT
+    url: https://wat.epcc.edu
+  - name: ID Card Portal
+    url: https://idcard.epcc.edu    
+  - name: TouchNet
+    url: https://secure.touchnet.com/C20715_tsa/web    
+  - name: Start
+    url: https://start.epcc.edu/paciweb
+  - name: Google DNS 1
     check: "tcp-ping"
-    ipv6: true
+    url: 8.8.4.4
+    port: 53
+  - name: Google DNS 2
+    check: "tcp-ping"
+    url: 8.8.8.8
+    port: 53
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  # cname: status.epcc.edu
+  baseUrl: /upptime
+  logoUrl: https://www.epcc.edu/style%20library/epcc/images/epcc_logo_white.svg
+  name: Status
+  introTitle: "uptime monitor and status page"
+  introMessage: [INTRO MESSAGE]
+  i18n:
+    footer: [FOOTER]
   navbar:
     - title: Status
       href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
+  theme: night
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
