--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,7 +4,7 @@ repo: upptime # The name of this repository
 
 sites:
   - name: EPCC Public Website
-    url: https://www.epcc.edu
+    url: https://www.epcc.edu/pages/proxy.aspx
     maxResponseTime: 5000
   - name: MyEPCC
     url: https://my.epcc.edu
